title icon chaged

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/png" href="/Viami favicon_symbol.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Viami - Enterprise Security Software</title>
     <meta name="description" content="Your first step towards cybersecurity. Comprehensive security software for managing data access, authentication, and protecting your business." />
@@ -10,11 +11,11 @@
     <meta property="og:title" content="Viami - Enterprise Security Software" />
     <meta property="og:description" content="Your first step towards cybersecurity. Comprehensive security software for managing data access, authentication, and protecting your business." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="" />
   </head>
 
   <body>
