--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/Viami favicon_symbol.png" />
+    <link rel="shortcut icon" href="/favicon.png" type="image/x-icon">
+    <link rel="icon" href="/favicon.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Viami - Enterprise Security Software</title>
     <meta name="description" content="Your first step towards cybersecurity. Comprehensive security software for managing data access, authentication, and protecting your business." />
